--- a/EventImmediatApp/templates/EventImmediatApp/events_list.html
+++ b/EventImmediatApp/templates/EventImmediatApp/events_list.html
@@ -35,7 +35,7 @@
                 </div>
             {% endfor %}
         {% else %}
-                <p>Any events found.</p>
+                <p>Any event found.</p>
         {% endif %}
         </div>
     </div>
