--- a/EventImmediatApp/templates/EventImmediatApp/events_create.html
+++ b/EventImmediatApp/templates/EventImmediatApp/events_create.html
@@ -12,7 +12,8 @@
                 <p>Status :</p>{{ form.status }}<br><br>
                 <p>Date start :</p>{{ form.date_start }}<br><br>
                 <p>Date end :</p>{{ form.date_end }}<br><br>
-                <button class="btn btn-success w-100" type="submit">Create event</button>
+                <a class="btn btn-danger w-100" href="{% url 'EventImmediatApp:events_list' %}">Cancel update <i class="bi bi-x"></i></a>
+                <button class="btn btn-success w-100 mt-2" type="submit">Create event <i class="bi bi-check-lg"></i></button>
             </form>
         </div>
     </div>
