--- a/EventImmediatApp/templates/EventImmediatApp/events_edit.html
+++ b/EventImmediatApp/templates/EventImmediatApp/events_edit.html
@@ -12,10 +12,8 @@
                     <p>Status : {{ form.instance.status }}</p>{{ form.status }}<br><br>
                     <p>Date start : {{ form.instance.date_start }}</p>{{ form.date_start }}<br><br>
                     <p>Date end : {{ form.instance.date_end }}</p>{{ form.date_end }}<br><br>
-                    <div>
-                        <a class="card-edit btn btn-danger" href="{% url 'EventImmediatApp:events_details' event.id_events %}">Cancel update <i class="bi bi-x"></i></a>
-                        <button class="btn btn-success w-100" type="submit">Update event</button>
-                    </div>
+                    <a class="btn btn-danger w-100" href="{% url 'EventImmediatApp:events_details' event.id_events %}">Cancel update <i class="bi bi-x"></i></a>
+                    <button class="btn btn-success w-100 mt-2" type="submit">Update event <i class="bi bi-check-lg"></i></button>
                 </form>
             </div>
         </div>
