--- a/EventImmediatApp/templates/EventImmediatApp/login.html
+++ b/EventImmediatApp/templates/EventImmediatApp/login.html
@@ -6,6 +6,9 @@
       <form method="post">
         {% csrf_token %}
         <div class="d-flex justify-content-center"><h1><strong>Log In</strong></h1></div><br>
+        {% if error %}
+          <p class="error text-danger">{{ error }}</p>
+        {% endif %}
         <p>Username :</p>{{ form.username }}<br><br>
         <p>Password :</p>{{ form.password }}<br><br>
         <div class="d-flex justify-content-center"><button class="btn btn-primary w-100" type="submit">Log in</button></div>
