--- a/EventImmediatApp/templates/EventImmediatApp/register.html
+++ b/EventImmediatApp/templates/EventImmediatApp/register.html
@@ -6,6 +6,9 @@
       <form method="post">
         {% csrf_token %}
         <div class="d-flex justify-content-center"><h1><strong>Sign In</strong></h1></div><br>
+        {% if error %}
+          <p class="error text-danger">{{ error }}</p>
+        {% endif %}
         <p>Username : </p>{{ form.username }}<br><br>
         <p>Email : </p>{{ form.email }}<br><br>
         <p>First Name : </p>{{ form.first_name }}<br><br>
